@@ -23,6 +23,8 @@ Version 3.0.0 - SVN
  - Add note about Java class naming in team manual. (Closes: #2153189)
  - Add binary file check in commandline submit. (Closes: #2046017)
  - Make HTML tables sortable in the jury view.
+ - Removed "feature" of only allowing alnum chars in filename base
+   for submit client problem parsing.
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
